04-ticketing-app/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx # needed for ingres-nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # allow use of regular expression in the paths
spec:
  rules:
  - host: ticketing.dev # made-up domain name. Will be defined in /etc/hosts
    http:
      paths:
      - path: /api/users/?(.*) # point to auth cluster IP service
        backend:
          serviceName: auth-srv
          servicePort: 3000
